# pbg-caspule

./: .gitignore  README.md  index.html  pyproject.toml
demo/: bond-network-demo-report.html  bond-network-with-viz-report.html  composite_report.py  demo_report.py  report.html
pbg_caspule/: __init__.py  composites.py  processes.py  types.py  visualizations.py
pbg_caspule/composites/: __init__.py  bond-network-demo.composite.yaml  bond-network-with-viz.composite.yaml
tests/: test_composites.py  test_processes.py
